src/main/java/com/example/hyebozabackend/global/error/custom/CustomException.java
package com.example.hyebozabackend.global.error.custom;

public class CustomException {
}
